@@ -9,6 +9,11 @@ Release 0.5.5.10
 	- Bug fix ID: 3575725
 	  field order list_users.tpl wrong when using ldap
 	  
+	- Bug fix ID: 3575798
+	  $schema is not set is fixed
+	  searching by name and givenname or vice versa is now possible
+	  
+	  
 Release 0.5.5.9
 	- Bug fix ID: 3575421
 	  search field issue
